--- a/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
@@ -38,30 +38,30 @@ spec:
             envFrom: &envFrom
               - secretRef:
                   name: "{{ .Release.Name }}-secret"
-            # probes:
-            #   liveness: &probes
-            #     enabled: true
-            #     custom: true
-            #     spec:
-            #       httpGet:
-            #         path: /api/server/ping
-            #         port: &port 2283
-            #       initialDelaySeconds: 0
-            #       periodSeconds: 10
-            #       timeoutSeconds: 1
-            #       failureThreshold: 3
-            #   readiness: *probes
-            #   startup:
-            #     enabled: true
-            #     custom: true
-            #     spec:
-            #       httpGet:
-            #         path: /api/server/ping
-            #         port: *port
-            #       initialDelaySeconds: 0
-            #       periodSeconds: 10
-            #       timeoutSeconds: 1
-            #       failureThreshold: 30
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /api/server/ping
+                    port: &port 2283
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
+              startup:
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /api/server/ping
+                    port: *port
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 30
             resources:
               requests:
                 cpu: 500m
@@ -69,7 +69,7 @@ spec:
                 nvidia.com/gpu: 1 # Request 1 GPU.
               limits:
                 # Disable during initial import of photographs.
-                # memory: 8Gi
+                memory: 8Gi
                 nvidia.com/gpu: 1
             securityContext: &securityContext
               allowPrivilegeEscalation: false
@@ -93,19 +93,19 @@ spec:
               NVIDIA_VISIBLE_DEVICES: "all"
               NVIDIA_DRIVER_CAPABILITIES: "all"
             envFrom: *envFrom
-            # probes:
-            #   liveness: &probes
-            #     enabled: true
-            #     custom: true
-            #     spec:
-            #       httpGet:
-            #         path: /ping
-            #         port: &mlPort 3003
-            #       initialDelaySeconds: 0
-            #       periodSeconds: 10
-            #       timeoutSeconds: 1
-            #       failureThreshold: 3
-            #   readiness: *probes
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /ping
+                    port: &mlPort 3003
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
             resources:
               requests:
                 cpu: 100m
@@ -113,7 +113,7 @@ spec:
                 nvidia.com/gpu: 1 # Request 1 GPU.
               limits:
                 # Disable during initial import of photographs.
-                # memory: 8Gi
+                memory: 8Gi
                 nvidia.com/gpu: 1
             securityContext: *securityContext
     defaultPodOptions:
@@ -138,9 +138,14 @@ spec:
         fsGroupChangePolicy: OnRootMismatch
     persistence:
       cache:
-        type: emptyDir
-        globalMounts:
-          - path: /.cache
+        existingClaim: "{{ .Release.Name }}"
+        advancedMounts:
+          immich:
+            machine-learning:
+              - path: /cache
+                subPath: cache
+              - path: /.cache
+                subPath: dot-cache
       config:
         type: secret
         name: "{{ .Release.Name }}-config-secret"
@@ -154,10 +159,6 @@ spec:
         path: /mnt/hdd-data/Immich
         globalMounts:
           - path: /data
-      ml-cache:
-        existingClaim: "{{ .Release.Name }}"
-        globalMounts:
-          - path: /cache
       photos:
         type: nfs
         server: nas.${SECRET_DOMAIN}
@@ -181,14 +182,12 @@ spec:
         rules:
           - backendRefs:
               - identifier: app
-                # port: *port
-                port: 2283
+                port: *port
     service:
       app:
         ports:
           http:
-            # port: *port
-            port: 2283
+            port: *port
           metrics-api:
             port: 8081
           metrics-ms:
@@ -196,5 +195,4 @@ spec:
       machine-learning:
         ports:
           http:
-            # port: *mlPort
-            port: 3003
+            port: *mlPort
